sign up section added

--- a/index.html
+++ b/index.html
@@ -266,6 +266,20 @@
     <!-- section5 end -->
 
 
+    <div class="sign-up">
+        <div class="sign-up-left">
+            <h2>Sign up to Newsletter <br> and recive 20% coupon for first shopping.</h2>
+
+        </div>
+        <div class="sign-up-right">
+            <div class="signup-form">
+                <input type="email" placeholder="Input Your email address">
+                <button>Sign Up</button>
+            </div>
+        </div>
+    </div>
+
+
     <footer>
         <div class="section6">
             <h1>Influencer products</h1>
