image animation added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             </div>
             <div class="right-side">
                 <div class="section2-camera">
-                    <img class="circle-image" src="images/Circle design.svg" alt="circle-photo">
-                    <img class="main-camera" src="images/main-camera.png" alt="camera-photo">
+                    <div class="camera-photo">
+                        <img class="circle-image" src="images/Circle design.svg" alt="circle-photo">
+                        <img class="main-camera" src="images/main-camera.png" alt="camera-photo">
+                    </div>
                 </div>
             </div>
         </div>
