--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="collection-photos">
             <div class="collection-photo">
                 <img src="images/action.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Action Camera</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -117,7 +117,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/airpod.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Airpod</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -133,7 +133,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/drone.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Dron</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -149,7 +149,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/lights.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Lights Shot</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -165,7 +165,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/mic.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Mic </h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -197,7 +197,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/single-light.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Light box</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -213,7 +213,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/tripod.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Tripod</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
@@ -229,7 +229,7 @@
             </div>
             <div class="collection-photo">
                 <img src="images/camera.png" alt="">
-                <h2>Flex Tripod</h2>
+                <h2>Camera</h2>
                 <h3>$50.48</h3>
                 <div class="ratting-info">
                     <i class="fas fa-star"></i>
